--- a/UI concept/flexbox.css
+++ b/UI concept/flexbox.css
@@ -1,18 +1,36 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .container {
-    border: 2px solid red;
-    height: 400px;
+    background-color: chartreuse;
+    padding: 1rem;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: flex-start;
+
+}
+
+.logo {
+    align-self: flex-start;
 }
 
 .item {
-    width: 40px;
-    padding: 5px;
-    border: 2px solid green;
+    color: whitesmoke;
+    background-color: green;
+}
+
+@media screen and (max-width : 786px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .item {
+        flex-grow: 1;
+        flex-basis: 100%;
+    }
 }
